Fix background image clipping from the sides

--- a/src/common.module.css
+++ b/src/common.module.css
@@ -1,7 +1,7 @@
 .bricks-background{
     background-size: 1000px;
     background-position: top;
-    background-repeat: repeat
+    background-repeat: repeat-y;
 }
 
 .section-header{
